--- a/frontend/src/components/SurveyList/SurveyList.css
+++ b/frontend/src/components/SurveyList/SurveyList.css
@@ -2,35 +2,147 @@
   display: flex;
 }
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
 
+
+
+
+.search-bar {
+  margin-top: 4rem;
+  width: 85vw;
+  margin-left: 4.8rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10px 4px 10px;
+
+}
+.search-bar h3 {
+  margin-left: 1rem;
+  font-size: 1.2rem;
+  color: #081838;
+  font-size: 20px;
+}
+
+.search-bar input[type="text"] {
+  width: 7rem;
+  margin-left: o.1rem;
+  height: 1.5rem;
+  border: none;
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.1);
+}
+
+.search-bar img {
+  height: 1.2rem;
+  width: 1.2rem;
+  margin-left: 2rem;
+}
+
+.search-bar button {
+  padding: 5px 10px;
+  border: none;
+  background-color:   #278DF1;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.search-bar button:hover{
+  background-color: green;
+  color: white;
+}
+
+.nb-right {
+  display: flex;
+  align-items: center;
+}
+
+
+.nb-left {
+  display: flex;
+  align-items: center;
+}
+
+.nb-left button{
+  display: inline-block;
+  margin: 0px;
+  padding: 0.3rem 1rem;
+  margin-left: 2.5rem;
+  margin-right: 1rem;
 }
 
 img{
-  width: 1rem;
-  height: 1rem;
-}
-ul{
-  list-style: none;
+  height: 1.4rem;
+  width: 1.4rem;
 }
 
-li{
-  display: inline-block;
+img:hover{
+  cursor: pointer;
+  height: 1.4rem;
+  width: 1.4rem;
+}
+.my-table {
+  margin-top: 1rem;
+  width: 85vw;
+  margin-left: 4.8rem;
+  border-collapse: collapse;
+}
+
+.my-table th{
+  color: #081838;
+  font-size: 18px;
+  padding: 15px 10px;
+  margin-bottom: 10px;
+}
+
+
+.my-table td{
+  padding: 10px 10px;
+  color: #4D4A4A;
+  font-size: 14px;
+}
+
+
+.my-table thead{
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
+  border-radius: 1px;
+}
+
+.my-table td{
   text-align: center;
 }
 
-ul{
-  display: flex;
-  flex-direction: row;
-  width: 90vw;
-  justify-content: space-between;
+
+@media only screen and (max-width: 600px) {
+  .search-bar {
+    flex-direction: column;
+  }
+  
+  .search-bar input[type="text"] {
+    width: 100%;
+    margin-left: 0;
+    margin-top: 5px;
+  }
+  
+  .search-bar button {
+    margin-top: 5px;
+  }
+  .my-table {
+    width: 100%;
+  }
+  
+  .my-table th, .my-table td {
+    display: block;
+    padding: 5px;
+    text-align: center;
+  }
+  
+  .my-table thead {
+    display: none;
+  }
+  
+  .my-table tbody tr {
+    border: 1px solid #ccc;
+    box-shadow: none;
+    margin-bottom: 10px;
+  }
 }
-
-
-
-
-
-
