surveylist-form updated

--- a/frontend/src/components/SideBar/SideBar.css
+++ b/frontend/src/components/SideBar/SideBar.css
@@ -7,6 +7,8 @@
     background-color: #278DF1;
     width: 37px;
     height: 100vh;
+    position: fixed;
+    top: 53px;
     margin: 0;
 }
 .sidebar-container .sidebar-element{
