--- a/frontend/src/components/LogIn/LogIn.css
+++ b/frontend/src/components/LogIn/LogIn.css
@@ -28,8 +28,8 @@ body{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 80vh;
-  width: 80vw;
+  height: 100%;
+  width: 100%;
 }
 
 
@@ -64,7 +64,11 @@ body{
 .welcome-text{
   width: 200px;
 }
-
+.welcome-container{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
 .form-container {
   background-color: #ffffff;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
