--- a/frontend/src/components/LogIn/LogIn.css
+++ b/frontend/src/components/LogIn/LogIn.css
@@ -28,8 +28,8 @@ body{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
-  width: 100%;
+  height: 80vh;
+  width: 80vw;
 }
 
 
@@ -137,8 +137,8 @@ body{
 .welcome-text{
   font-size: 1.875rem;
   width: 12.5rem;
-  font-weight: 600;
-  color: #5C5C5C;
+  font-weight: 500;
+  color: #6d6b6b;
 }
 
 .welcome-info{
