--- a/frontend/src/components/SurveyForm/SurveyForm.css
+++ b/frontend/src/components/SurveyForm/SurveyForm.css
@@ -1,139 +1,3 @@
-.survey-form{
-  position: absolute;
-  border: none;
-  box-shadow: none;
-  padding-top: 100px;
-}
-#name-div{
-  position: absolute;
-  left: 239px;
-  top: 178px;
-}
-#name-div input{
-  width: 388px;
-  height: 30px;
-}
-
-#start-date-div{
-  position: absolute;
-  top: 178px;
-  left: 772px;
-}
-
-#start-date-div input{
-  height: 30px;
-  width: 120px;
-}
-
-#end-date-div{
-  position: absolute;
-  top: 178px;
-  left: 1022px;
-}
-
-#end-date-div input{
-  height: 30px;
-  width: 120px;
-}
-
-#desc-div{
-  position: absolute;
-  top: 270px;
-  left: 239px;
-}
-
-
-
-#desc-div textarea{
-  width: 388px;
-  height: 66px; 
-}
-
-#other-criteria-div{
-  position: absolute;
-  top: 270px;
-  left: 772px;
-}
-
-#other-criteria-div textarea{
-height: 66px;
-width: 370px;
-}
-
-#survey-type-div{
-  position: absolute;
-  left: 239px;
-  top: 395px;
-}
-#survey-type-div :nth-child(2) {
-  height: 30px;
-    width: 140px;
-}
-
-#image-div{
-  position: absolute;
-  top: 395px;
-  left: 772px;
-}
-
-#image-div input{
-  height: 66px;
-  width: 374px;
-  border: 1px solid;
-}
-
-#submit-btn-div{
-  position: absolute;
-  top: 70px;
-  left: 990px;
-  width: 110px;
-  background-color: #278DF1;
-  color: white;
-}
-
-#submit-btn-cancel{
-  position: absolute;
-  top: 86px;
-  left: 850px;
-  width: 110px;
-  background-color: white;
-  border:1px solid #278DF1;
-  color:  #278DF1;
-}
-form{
-  border: none;
-  box-shadow: none;
-}
-h1{
-  color: #081838;
-  font-size: 24px;
-  font-weight: 600;
-  top: 96px;
-  position: absolute;
-  left: 240px;
-  width: 200px;
-}
-
-
-
-input{
-  border: 1px solid gray;
-  border-radius: 3px;
-}
-label{
-  color: #2D2D2E;
-  font-size: 18px;
-} 
-
-body{
-  
-}
-
-
-
-
-
-
 @media only screen and (max-width: 767px) {
   html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -180,94 +44,161 @@ table {
 }
 .xoxo{
   display: flex;
-} 
-
-
-
-
-
- /* .survey-form {
+}
+.survey-form{
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  width:65vw;
+  margin-left: 32vh;
+  margin-top: 3rem;
+}
+.fill-form{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-left: 7.5rem;
+  padding: 3rem 1rem;
 }
 
-.survey-form form {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(4, auto);
-  gap: 2rem;
-  margin-top: 2rem;
+.form-section{
+  display: flex;
+  justify-content: space-between;
 }
 
-.survey-form label {
-  font-size: 1.8rem;
+.dates-div{
+  display: flex;
+  justify-content: space-between;
+  width: 45%;
+}
+
+
+.name{
+  width: 45%;
+}
+.name input{
+  width: 100%;
+  padding: 0.5rem;
+}
+
+.start-date input{
+  padding: 0.5rem;
+}
+
+.end-date input{
+  padding: 0.5rem;
+}
+
+
+.desc{
+  width: 45%;
+}
+
+.desc textarea{
+  width: 100%;
+  height: 4rem;
+}
+
+.other-criteria {
+  width: 45%;
+
+}
+.other-criteria textarea{
+  width: 100%;
+  height: 4rem;
+}
+
+.survey-type{
+  width: 45%;
+}
+
+.survey-type select{
+  width: 50%;
+  height: 2rem;
+}
+
+.image{
+  width: 45%;
+}
+
+.image-upload input{
+  width: 100%;
+  height: 5rem;
+  background-color:white;
+}
+
+.fill{
+  display: block;
+  border: 1px solid #CCCCCC;
+  border-radius: 4px;
+  color: #878889;
   margin-bottom: 0.5rem;
 }
 
-.survey-form input,
-.survey-form textarea {
-  width: 100%;
-  height: 3rem;
-  border: 1px solid gray;
-  border-radius: 3px;
-  padding: 0.5rem;
-  font-size: 1.6rem;
+
+
+
+
+
+
+
+
+
+
+
+.survey-form input{
+  color: gray;
+} 
+
+
+.head-btn-div{
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  width: 70vw;
+  margin-left: 18vh;
+  margin-top: 5rem;
+}
+.create-survey-heading{
+  margin: 0px;
+  padding: 1rem 2rem;
+  color: #081838;
+  font-size: 1.5rem;
 }
 
-.survey-form input[type="submit"] {
-  background-color: #278DF1;
-  color: white;
-  border: none;
-  border-radius: 3px;
-  height: 3rem;
-  font-size: 1.8rem;
-  margin-top: 2rem;
-  cursor: pointer;
+
+ label{
+  color: #2D2D2E;
+  font-size: 18px;
+  font-size: 14px;
+  font-weight: 700; 
+} 
+
+
+.head-btn-div button{
+  display: inline-block;
+  padding: 0.35rem 2rem;
+  border-radius: 0.2rem;
 }
 
-.survey-form input[type="button"] {
+#cancel-button{
+  border: 1px solid #278DF1;
   background-color: white;
   color: #278DF1;
-  border: 1px solid #278DF1;
-  border-radius: 3px;
-  height: 3rem;
-  font-size: 1.8rem;
-  margin-top: 2rem;
+  margin-top: 0.35rem;
+  margin-right: 0.35rem;
   cursor: pointer;
 }
 
-.survey-form .form-group {
-  display: flex;
-  flex-direction: column;
+#next-button{
+  background-color:  #278DF1;
+  color: white;
+  border: none;
+  margin-top: 1rem;
+  margin-right: 2rem;
+  cursor: pointer;
 }
 
-.survey-form .form-group-2 {
-  grid-column: 1 / -1;
+#next-button:hover{
+  background-color: green;
 }
-
-.survey-form .form-group-3 {
-  grid-column: 1 / 2;
-}
-
-.survey-form .form-group-4 {
-  grid-column: 2 / -1;
-}
-
-@media only screen and (max-width: 767px) {
-  .survey-form form {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .survey-form .form-group-2 {
-    margin-top: 2rem;
-  }
-
-  .survey-form input[type="submit"],
-  .survey-form input[type="button"] {
-    margin-top: 2rem;
-    width: 100%;
-  }
-} */
