--- a/frontend/src/components/SurveyList/SurveyList.css
+++ b/frontend/src/components/SurveyList/SurveyList.css
@@ -2,14 +2,10 @@
   display: flex;
 }
 
-
-
-
-
 .search-bar {
   margin-top: 4rem;
   width: 85vw;
-  margin-left: 4.8rem;
+  margin-left: 7rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -68,6 +64,7 @@
   padding: 0.3rem 1rem;
   margin-left: 2.5rem;
   margin-right: 1rem;
+  border-radius: 5px;
 }
 
 img{
@@ -83,7 +80,7 @@ img:hover{
 .my-table {
   margin-top: 1rem;
   width: 85vw;
-  margin-left: 4.8rem;
+  margin-left: 7rem;
   border-collapse: collapse;
 }
 
@@ -105,6 +102,10 @@ img:hover{
 .my-table thead{
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
   border-radius: 1px;
+}
+
+.my-table tbody td{
+  cursor: pointer;
 }
 
 .my-table td{
