Login-logout-reg

--- a/frontend/src/components/SignUp/SignUp.css
+++ b/frontend/src/components/SignUp/SignUp.css
@@ -9,7 +9,10 @@ body{
   min-height: 100vh;
   overflow: hidden;
 }
-
+.error-block{
+  color:red;
+  text-align: center;
+}
 .container{
   width: 80%;
   height: 70vh;
