--- a/frontend/src/components/Header/navbar.css
+++ b/frontend/src/components/Header/navbar.css
@@ -28,3 +28,23 @@
 .nav-logo{
     margin-left: 7px;
 }
+.Logout {
+    border: 1px solid;
+    border-radius: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 2px;
+    padding-bottom: 5px;
+    position: relative;
+    left:380px;
+    background-color: yellow;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.username {
+    text-align: center;
+    position: relative;
+    left: 270px;
+    font-weight: 400;
+    font-size:large;
+}
