--- a/frontend/src/components/CreateQuestion/CreateQuestion.css
+++ b/frontend/src/components/CreateQuestion/CreateQuestion.css
@@ -1,28 +1,15 @@
-.questions-add{
+.backpageArrow a{
     display: flex;
-    flex-direction: column;
-    margin: 5px;
+    flex-direction: row;
+    text-decoration: none;
+    display: inline-flex;
     padding: 5px;
 }
-.backpageArrow{
+.backpageArrow a p{
+    margin-left: 2px;
+}
+.question-addOption{
     display: flex;
     flex-direction: row;
-}
-.questions-add button{
-    margin-left: 30px;
-    border: 1px solid black;
-    border-radius: 2px;
-    padding: 4px;
-}
-.questions-add input{
-    height:30px;
-    width:70%;
-}
-.newQuestionContainer{
-    display: flex;
-    flex-direction: row;
-}
-.questions-container{
-    display: flex;
-    flex-direction: column;
+    width:70%
 }
