--- a/frontend/src/components/LogIn/LogIn.css
+++ b/frontend/src/components/LogIn/LogIn.css
@@ -42,12 +42,11 @@ table {
 }
 
  body{
-  background: transparent linear-gradient(0deg, #6ED4FF 0%, #FFFFFF 100%) 0% 0% no-repeat padding-box;
   font-size: 1rem; 
 }
 .main-container{
   width: 100%;
-  height: 75vh;
+  min-height: 100vh;
 
   display: flex;
   justify-content: space-between;
