--- a/frontend/src/components/SurveyForm/SurveyForm.css
+++ b/frontend/src/components/SurveyForm/SurveyForm.css
@@ -19,6 +19,9 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+.surveyForm-container{
+  min-height: 100vh;
+}
  article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -49,6 +52,7 @@ table {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh;
   width:65vw;
   margin-left: 32vh;
   margin-top: 3rem;
