--- a/frontend/src/components/Header/navbar.css
+++ b/frontend/src/components/Header/navbar.css
@@ -33,6 +33,8 @@
 
 .userInfo{
     display: flex;
+    position: relative;
+    right: 150px;
     flex-direction:row;
     align-items: center;
     display: inline-flex;
@@ -42,8 +44,7 @@
 }
 .username {
     position: relative;
-    left: 200px;
-    
+    left: 100px;
     font-weight: bold;
 }
 
