--- a/frontend/src/components/SurveyList/SurveyList.css
+++ b/frontend/src/components/SurveyList/SurveyList.css
@@ -1,7 +1,15 @@
+:root {
+  --bodyColor: "#000000";
+}
+body {
+  background-color: var(--bodyColor);
+}
+
+
+
 .xoxo{
   display: flex;
 }
-
 .search-bar {
   margin-top: 4rem;
   width: 85vw;
@@ -96,6 +104,7 @@ img:hover{
   padding: 10px 10px;
   color: #4D4A4A;
   font-size: 14px;
+  font-weight: 700;
 }
 
 
