--- a/frontend/src/components/CreateQuestion/CreateQuestion.css
+++ b/frontend/src/components/CreateQuestion/CreateQuestion.css
@@ -17,4 +17,9 @@
     min-height: 100vh;
     min-width: 100vw;
 }
+.question-Container .question-field{
+    min-width:60vw ;
+    font-size: large;
+    
+}
 
