--- a/frontend/src/components/CreateQuestion/CreateQuestion.css
+++ b/frontend/src/components/CreateQuestion/CreateQuestion.css
@@ -11,15 +11,36 @@
 .question-addOption{
     display: flex;
     flex-direction: row;
-    width:70%
+    width:80%
 }
 .question-Container{
+    margin-top: 10px;
     min-height: 100vh;
     min-width: 100vw;
 }
 .question-Container .question-field{
-    min-width:60vw ;
+    min-width:55vw ;
     font-size: large;
-    
+    border-radius: 3px;
+    border-left: none;
+    border-top: none;
+    border-right: none;
+    height: 40px;
+}
+.question-Container .option-field{
+    min-width:20vw ;
+    font-size: large;
+    border-radius: 3px;
+    border-left: none;
+    border-top: none;
+    border-right: none;
+    height: 40px;
+}
+.option-div{
+    margin-left: 20px;
+    margin: 3px;
+}
+.full-Question-option{
+    margin-top: 5px;
 }
 
