--- a/frontend/src/components/QuestionsPreview/QuestionPreview.css
+++ b/frontend/src/components/QuestionsPreview/QuestionPreview.css
@@ -4,3 +4,10 @@
 .preview-container{
     min-height: 100vh;
 }
+.prev-response{
+    font-size: x-large;
+    background-color: green;
+    color: beige;
+    border: none;
+    border-radius:20px ;
+}
